# vaultplane-gateway

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  SECURITY.md
.github/workflows/: chart.yml  ci.yml  docker.yml  release.yml
charts/vaultplane/: .helmignore  Chart.yaml  README.md  values.yaml
charts/vaultplane/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/vaultplane/: Cargo.toml
crates/vaultplane-core/: Cargo.toml
crates/vaultplane-core/benches/: hot_path.rs
crates/vaultplane-core/src/: audit.rs  auth.rs  cache.rs  config.rs  cost.rs  default_pricing.yaml  error.rs  lib.rs  plugin.rs  provider.rs  sse.rs  stream_observer.rs
crates/vaultplane-core/src/plugin/: wasm.rs
crates/vaultplane-core/src/provider/: anthropic.rs  azure.rs  bedrock.rs  openai.rs  registry.rs  routing.rs  sigv4.rs
crates/vaultplane-core/tests/: wasm_plugin.rs
crates/vaultplane-ctl/: Cargo.toml
crates/vaultplane-ctl/src/: main.rs
crates/vaultplane-plugin-sdk/: Cargo.toml
crates/vaultplane-plugin-sdk/src/: lib.rs
crates/vaultplane-plugin-sdk/wit/: world.wit
crates/vaultplane/src/: admin.rs  control_plane.rs  main.rs  prom.rs  proxy.rs  runtime.rs  telemetry.rs  tls.rs
examples/: README.md
examples/observability/: README.md  docker-compose.yml  prometheus.yml  vaultplane.yaml
examples/quickstart/: README.md  docker-compose.yml  vaultplane.yaml
integrations/: README.md
integrations/collector/: datadog.yaml  dynatrace.yaml  elastic.yaml  grafana-cloud.yaml  honeycomb.yaml  new-relic.yaml  splunk-observability.yaml
integrations/dynatrace/: README.md  dashboard.json
integrations/rubrik/: README.md  collector.yaml
plugins/pii-redaction/: Cargo.toml  README.md
plugins/pii-redaction/src/: lib.rs
