[package]
name = "vaultplane-core"
description = "Shared types and runtime building blocks for the VaultPlane Gateway data plane."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
figment.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Jail (isolated env + cwd for config tests) is behind figment's `test` feature.
figment = { workspace = true, features = ["test"] }
