[package]
name = "vaultplane-core"
description = "Shared types and runtime building blocks for the VaultPlane Gateway data plane."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
figment.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
hmac.workspace = true
moka.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
# Jail (isolated env + cwd for config tests) is behind figment's `test` feature.
figment = { workspace = true, features = ["test"] }
wiremock = { workspace = true }
bytes = { workspace = true }
# A capturing subscriber for the audit-event tests.
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "hot_path"
harness = false
