[package]
name = "pii-redaction"
description = "Reference VaultPlane Gateway plugin that redacts common PII patterns inline."
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/vaultplane/vaultplane-gateway"
authors = ["VaultPlane"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
regex = "1"
serde_json = "1"

[profile.release]
# A reference plugin: keep the shipped component small.
opt-level = "s"
lto = true
strip = true
